[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["Nate Mara <natemara@fastmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "*"
aoc-runner-derive = "*"
indicatif = "0.15.0"
regex = "1.4.2"
